--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lrc": "^3.0.2",
+    "react-router-dom": "^6.20.0",
     "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0"
   },
