--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/validator": "^13.11.7",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
@@ -23,7 +26,8 @@
     "react-lrc": "^3.0.2",
     "react-router-dom": "^6.20.0",
     "swiper": "^11.0.4",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
